objects/Strand_Grade__c.object
<CustomObject>
    <description>Stores strand grades per student/reporting period/strand (Standard object)</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grade Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Override__c</fullName>
        <label>Grade Override</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Standards Based Grade of the Strand for the Student/Reporting Period/Strand</description>
        <label>Calculated Grade</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reporting_Period_Name__c</fullName>
        <formula>Reporting_Period__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reporting Period of the Strand Grade</description>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Strand Grades</relationshipLabel>
        <relationshipName>Strand_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strand_Description__c</fullName>
        <label>Strand Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strand_Grade__c</fullName>
        <formula>IF(NOT(ISNULL( Grade_Override__c )), TEXT(ROUND(Grade_Override__c,1)), 
IF(Grade__c&gt;=3.75,&apos;4.0&apos;, 
IF(Grade__c&gt;=3.25,&apos;3.5&apos;, 
IF(Grade__c&gt;=2.75,&apos;3.0&apos;, 
IF(Grade__c&gt;=2.25,&apos;2.5&apos;, 
IF(Grade__c&gt;=1.75,&apos;2.0&apos;, 
IF(Grade__c&gt;=1.25,&apos;1.5&apos;, 
IF(Grade__c&gt;=0.75,&apos;1.0&apos;, 
IF(Grade__c&gt;=0.25,&apos;0.5&apos;, 
IF(Grade__c&gt;=0.0,&apos;0.0&apos;, 
&apos;N/A&apos;))))))))))</formula>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strand_ID__c</fullName>
        <formula>Strand__r.Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strand ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Strand related to the Strand Grade</description>
        <label>Strand</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Strand Grades</relationshipLabel>
        <relationshipName>Strand_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Strand Grades</relationshipLabel>
        <relationshipName>Strand_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>TEXT(Strand__r.Course__r.Subject_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>Strand Grade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Strand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SG-{000000}</displayFormat>
        <label>Strand Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strand Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>