objects/Strand_Grade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Strand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>